# abstouch-nux

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: c-cpp.yml
completion/: Makefile.am  abstouch-nux-completion.bash  abstouch-nux.fish  bash  fish  zsh
config/: Makefile.am
doc/: Makefile.am  installing.md  usage.md
examples/: Makefile.am  example.sh
man/: Makefile.am  abstouch.1
package/: PKGBUILD
src/: Makefile.am  abstouch-nux.c  calibrate.c  calibrate.h  event.c  event.h  input.c  input.h  input_client.c  input_client.h  set_config.c  set_config.h  set_display.c  set_display.h  set_event.c  set_event.h  set_offset.c  set_offset.h  str.c  str.h  str_functions.c  str_functions.h
src/c/: calibrate.c  input.c  set_event.c  set_offset.c
src/go/: main.go
src/rust/: main.rs
